# git-view

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cliff.toml  flake.nix  rust-toolchain.toml
.github/workflows/: build-without-paths.yml  build.yml  changelog.yml  deploy.yml  homebrew.yml  manual-homebrew.yml  release.yml  test.yml
src/: error.rs  git.rs  lib.rs
