[package]
name = "git-view"
version = "0.1.0"
edition = "2021"
authors = ["Goudham Suresh <sgoudham@gmail.com>"]
description = "A git sub-command to view your git repository in the web browser"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sgoudham/git-view"
exclude = [".github/**"]

[[bin]]
name = "git-view"
path = "src/bin/git-view.rs"

[lib]
name = "git_view"
path = "src/lib.rs"

[dependencies]
clap = { version = '3.1.18', features = ["cargo"] }
url = { version = '2.3.1' }
webbrowser = { version = '0.8.4' }

[dev-dependencies]
test-case = { version = '2.2.2' }
mockall = { version = '0.11.2' }
