[package]
name = "git-view"
version = "1.0.0"
edition = "2021"
authors = ["Goudham Suresh <sgoudham@gmail.com>"]
description = "A git sub-command to view your git repository on GitHub"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sgoudham/git-view"
include = [ "/src", "/README.md", "/LICENSE" ]

[[bin]]
name = "git-view"

[lib]
name = "git_view"
path = "src/lib.rs"

[dependencies]
clap = { version = '3.2.25', features = ["cargo"] }
url = { version = '2.3.1' }
webbrowser = { version = '0.8.10' }

[dev-dependencies]
test-case = { version = '3.1.0' }
mockall = { version = '0.11.4', features = ["nightly"] }
